# score-addon-threedim

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  addon.json  release.sh  score_addon_structuresynth.cpp  score_addon_structuresynth.hpp  score_addon_threedim.cpp  score_addon_threedim.hpp
.github/workflows/: builds.yaml
StructureSynth/: AnEffect.hpp  AnEffectModel.cpp  AnEffectModel.hpp
Threedim/: Noise.hpp  ObjLoader.cpp  ObjLoader.hpp  Ply.cpp  Ply.hpp  Primitive.cpp  Primitive.hpp  StructureSynth.cpp  StructureSynth.hpp  TinyObj.cpp  TinyObj.hpp
Threedim/ModelDisplay/: Executor.cpp  Metadata.hpp  ModelDisplayNode.cpp  ModelDisplayNode.hpp  Process.cpp
